--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ description = "A library for calculation of deficiency number (a.k.a. xiangting 
 version = "0.1.0"
 authors = ["Apricot S."]
 edition = "2021"
-license = "MIT"
+license-file = "LICENSE"
 readme = "README.md"
 repository = "https://github.com/Apricot-S/xiangting"
 keywords = ["mahjong"]
