test: Set a environment variable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+    "terminal.integrated.env.linux": {
+        "SHANTEN_NUMBER_ROOT": "${workspaceFolder}/../shanten-number"
+    },
     "rust-analyzer.cargo.features": [
         "common"
     ]
