test: Change the verification library from shanten-number to nyanten (WIP)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
-    "terminal.integrated.env.linux": {
-        "SHANTEN_NUMBER_ROOT": "${workspaceFolder}/../shanten-number"
-    },
     "rust-analyzer.cargo.features": [
-        "common"
+        "common",
+        "correctness"
     ]
 }
