--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,15 +24,26 @@ jobs:
   doc:
     runs-on: ubuntu-latest
     needs: build
-    if:  github.event_name == 'push' || github.event.pull_request.merged == true
-
     steps:
     - uses: actions/checkout@v4
     - name: Run doc
       run: cargo doc --no-deps
 
     - name: Deploy
-      uses: peaceiris/actions-gh-pages@v4
+      uses: actions/upload-pages-artifact@v3
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./target/doc/
+        path: target/doc
+
+  deploy:
+      needs: doc
+      permissions:
+        pages: write
+        id-token: write
+      environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
+      runs-on: ubuntu-latest
+      steps:
+        - name: Deploy to GitHub Pages
+          id: deployment
+          uses: actions/deploy-pages@v4
