--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,9 +29,8 @@ cxx-build = "1.0.128"
 
 [features]
 bench = ["dep:mt19937", "dep:rand"]
-test = []
-common = ["bench", "test"]
-correctness = ["test"]
+common = ["bench"]
+correctness = []
 
 [[bench]]
 name = "bench"
