Refactor: Fixed an issue where modules for test and benchmark during development were made available externally by specifying features. (#11)
* refactor: Remove the test module from common

* refactor: Remove the bench module from common

* chore: Delete a redundant script

* docs: Remove notifications for unused third-party libraries

* chore: Remove feature specification

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,22 +16,19 @@ path = "src/lib.rs"
 
 [dependencies]
 bitvec = "1.0.1"
-mt19937 = { version = "2.0.1", optional = true }
-rand = { version = "0.8.5", optional = true }
 thiserror = "1.0.63"
 
 [dev-dependencies]
 criterion = "0.5.1"
 cxx = "1.0.128"
+mt19937 = "2.0.1"
+rand = "0.8.5"
 
 [build-dependencies]
 cxx-build = "1.0.128"
 
 [features]
-bench = ["dep:mt19937", "dep:rand"]
-test = []
-common = ["bench", "test"]
-correctness = ["test"]
+correctness = []
 
 [[bench]]
 name = "bench"
