chore: Exclude VSCode settings

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,6 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,rust,rust-analyzer
+
+# VSCode
+.vscode
