feat: Change the replacement number calculation algorithm (#14)
* feat: Prepare for build-table implementation

* feat: Implement build_table

* feat: Implement hash

* refactor: use enumerate

* refactor

* feat: Change visibility only during build-map

* chore: Configure required-features

* refactor: Change the map size type to usize

* feat: Implement a dummy build_map

* refactor: Change the compile options so that the file can be built

* feat: Modify the map type

* feat: Modify the map output format

* feat: Modify the map output format

* feat: Implement pre-calculation (WIP)

* feat: Use all wanzi as arguments even in 19m block

* feat: Separate types by type of tiles (WIP)

* feat: improve (WIP)

* feat: Improve count_19m_block

* test: add unit tests

* feat: Improve count_zipai_block

* feat: Remove duplicate data

* feat: Update zipai_map

* style: add blank lines

* feat: Update the format of shupai_map

* feat: Improve count_shupai_block (WIP)

* feat: Update shupai_map (WIP)

* feat: Implement wanzi_19_table

* chore: Add a shebang

* refactor: Consolidate table types into generics

* feat: Implement wanzi_19_map

* test: add unit tests

* feat: Implement counting using maps

* fix: Change map from const to static to avoid stack overflow

* refactor: Add inline

* fix: Change the parameter to a slice instead of an array

* feat: Use maps to calculate (WIP)

* refactor: Define types where needed

* refactor: add getter

* feat: Record the number of meld candidates (joints+pairs) instead of the number of joints

* chore: Add --release flag to build map

* test: add a unit test

* test: Change the tests so that they do not depend on the order of the elements in the tuple.

* feat: Consider the four tiles (WIP)

* test: Add test (currently fails)

* fix: Fix merge inconsistencies

* chore: Move the `bin` position, which is only used during development, down

* fe

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ name = "xiangting"
 path = "src/lib.rs"
 
 [dependencies]
-bitvec = "1.0.1"
 thiserror = "1.0.63"
 
 [dev-dependencies]
@@ -28,7 +27,19 @@ rand = "0.8.5"
 cxx-build = "1.0.128"
 
 [features]
+build-file = []
+build-map = ["build-file"]
 correctness = []
+
+[[bin]]
+name = "build-table"
+path = "src/bin/build_table.rs"
+required-features = ["build-file"]
+
+[[bin]]
+name = "build-map"
+path = "src/bin/build_map/main.rs"
+required-features = ["build-map"]
 
 [[bench]]
 name = "bench"
