--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "xiangting"
-description = "A library for calculation of deficiency number (a.k.a. xiangting number, 向聴数)."
+description = "A library for calculating the deficiency number (a.k.a. the xiangting number, 向聴数)."
 version = "2.0.3"
 authors = ["Apricot S."]
 edition = "2021"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/Apricot-S/xiangting"
-keywords = ["mahjong"]
+keywords = ["mahjong", "shanten", "xiangting"]
 categories = ["algorithms"]
 
 [lib]
