--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ description = "A library for calculating the deficiency number (a.k.a. xiangting
 version = "4.0.0"
 authors = ["Apricot S."]
 edition = "2024"
+rust-version = "1.85"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/Apricot-S/xiangting"
