--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ rust-version = "1.85"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/Apricot-S/xiangting"
-keywords = ["mahjong", "shanten", "xiangting"]
+keywords = ["mahjong", "riichi", "shanten", "xiangting"]
 categories = ["algorithms"]
 
 [lib]
