--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ thiserror = "2.0.17"
 [dev-dependencies]
 criterion = "0.7.0"
 cxx = "1.0.186"
-mt19937 = "3.1.0"
 rand = "0.9.2"
+rand_pcg = "0.9.0"
 
 [build-dependencies]
 cxx-build = { version = "1.0.186", optional = true }
