--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xiangting"
-description = "A library for calculating the deficiency number (a.k.a. xiangting number, 向聴数)."
+description = "A library for calculating the deficiency number (a.k.a. xiàngtīng number, 向聴数)."
 version = "5.0.1"
 authors = ["Apricot S."]
 edition = "2024"
