chore: Add "no-std" category

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/Apricot-S/xiangting"
 keywords = ["mahjong", "riichi", "shanten", "xiangting"]
-categories = ["algorithms"]
+categories = ["algorithms", "no-std"]
 
 [lib]
 name = "xiangting"
