--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,14 +9,14 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/Apricot-S/xiangting"
 keywords = ["mahjong", "riichi", "shanten", "xiangting"]
-categories = ["algorithms"]
+categories = ["algorithms", "no-std"]
 
 [lib]
 name = "xiangting"
 path = "src/lib.rs"
 
 [dependencies]
-thiserror = "2.0.17"
+thiserror = { version = "2.0.17", default-features = false }
 
 [dev-dependencies]
 criterion = "0.7.0"
