--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2024"
 rust-version = "1.85"
 license = "MIT"
 readme = "README.md"
+documentation = "https://docs.rs/xiangting"
 repository = "https://github.com/Apricot-S/xiangting"
 keywords = ["mahjong", "riichi", "shanten", "xiangting"]
 categories = ["algorithms", "no-std"]
