--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
         path: target/doc
 
   deploy:
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       needs: doc
       permissions:
         pages: write
