--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+      - develop
 
 env:
   CARGO_TERM_COLOR: always
@@ -38,6 +42,7 @@ jobs:
         path: target/doc
 
   deploy:
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       needs: doc
       permissions:
         pages: write
