--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,11 +18,12 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v6
+      with:
+        persist-credentials: false
+
     - name: Build
       run: cargo build --verbose
     - name: Run tests
@@ -33,6 +34,9 @@ jobs:
     needs: build
     steps:
     - uses: actions/checkout@v6
+      with:
+        persist-credentials: false
+
     - name: Run doc
       run: cargo doc --no-deps
 
